Branch cleanup, all tests passing

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -298,7 +298,6 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     Boolean matches(Object calcItem);
   }
 
-  @SuppressWarnings('PMD.UnusedLocalVariable')
   global enum InvocationPoint {
     FROM_APEX,
     FROM_INVOCABLE,
@@ -414,7 +413,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     isDeferralAllowed = value;
   }
 
-  public void setCurrentJobId(String jobId) {
+  protected void setCurrentJobId(String jobId) {
     currentJobId = jobId;
   }
 
